p3/confs/deployement.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: will-app-deployment
  labels:
    app: will
spec:
  selector:
    matchLabels:
      app: will
  template:
    metadata:
      labels:
        app: will
    spec:
      containers:
      - name: will
        image: wil42/playground:v1
        ports:
        - containerPort: 8888
---
apiVersion: v1
kind: Service
metadata:
  name: will-app-service
  labels:
    app: will
spec:
  type: LoadBalancer
  selector:
      app: will
  ports:
    - protocol: TCP
      port: 8888
      targetPort: 8888
